syntax = "proto3";

option go_package = "homework-system/proto";
package homework;

service HomeworkService {
  rpc SubmitHomework (HomeworkRequest) returns (HomeworkResponse);
}

message HomeworkRequest {
  string student_name = 1;
  string title = 2;
}

message HomeworkResponse {
  string status = 1;
}
